@@ -1,5 +1,10 @@
 2009-02-10  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/versioncontrol/git.py: hint user about the switch from svn to
+	git when a git module is missing .git.  (closes: #570858)
+
+2009-02-10  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-suites-2.26.modules: libsoup has now a (mostly) hard
 	dependency on libproxy and sqlite.  (closes: #571149)
 
